--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,18 @@ services:
     networks:
       - backend-network
   
-  # backend:
-  #   image: node:20-alpine
-  #   volumes:
-  #     - ./backend:/app
-  #   working_dir: /app
-  #   command: npm run start:docker
-  #   depends_on:
-  #     - postgres
-  #   ports:
-  #     - 3000:3000
-  #   networks:
-  #     - backend-network
+  backend:
+    image: node:20-alpine
+    volumes:
+      - ./backend:/app
+    working_dir: /app
+    command: npm run start:docker
+    depends_on:
+      - postgres
+    ports:
+      - 3000:3000
+    networks:
+      - backend-network
 
 networks:
   backend-network:
